--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-/.bundle/
-/.yardoc
-/Gemfile.lock
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
-
-# rspec failure tracking
-.rspec_status
+Gemfile.lock
+*.swp
+*.swo
+.DS_Store
+coverage
+coverage.data
+*.gem
+.bundle
